Add more customization options for test case weights in programming exercises (#2001)

--- a/src/main/webapp/i18n/de/programmingExercise.json
+++ b/src/main/webapp/i18n/de/programmingExercise.json
@@ -97,12 +97,12 @@
                 "title": "Verwalte Testfälle",
                 "hideInactive": "Inaktive Testfälle verbergen",
                 "showInactive": "Inaktive Testfälle anzeigen",
-                "resetWeights": "Gewichtung zurücksetzen",
-                "weightsReset": "Die Gewichtung wurde erfolgreich zurückgesetzt.",
-                "weightsResetFailed": "Die Gewichtung konnte nicht zurückgesetzt werden.",
-                "saveWeights": "Gewichtung speichern",
-                "weightsUpdated": "Die Gewichtung wurde erfolgreich gespeichert.",
-                "weightCouldNotBeUpdated": "Die Gewichtung für den Testfall {{id}} konnte nicht übernommen werden: {{error}}.",
+                "reset": "Testfälle zurücksetzen",
+                "resetSuccessful": "Die Tests wurden erfolgreich zurückgesetzt.",
+                "resetFailed": "Die Tests konnten nicht zurückgesetzt werden.",
+                "save": "Gewichtung speichern",
+                "testsUpdated": "Die Tests wurde erfolgreich gespeichert.",
+                "testsCouldNotBeUpdated": "Die Tests {{id}} konnte nicht übernommen werden: {{error}}.",
                 "saveTestCases": "Testfälle speichern",
                 "testCasesUpdated": "Die Testfälle wurden erfolgreich gespeichert.",
                 "testCasesCouldNotBeUpdated": "Die folgenden Testfälle konnten nicht gespeichert werden: {{testCases}}.",
