Add percentage to distribution

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -60,7 +60,7 @@
         "examScores": {
             "maxPoints": "Maximale Punktzahl",
             "title": "Klausur Ergebnisse",
-            "exerciseStatisticsTitle": "Aufgaben Statistik",
+            "examStatisticsTitle": "Klausur Statistik",
             "studentResultsTitle": "Studenten Ergebnisse",
             "titleExerciseGroupColumn": "Aufgabengruppe",
             "titleExerciseColumn": "Aufgabe",
