--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -60,7 +60,7 @@
         "examScores": {
             "maxPoints": "Maximum Points",
             "title": "Exam Scores",
-            "exerciseStatisticsTitle": "Exercise Statistics",
+            "examStatisticsTitle": "Exam Statistics",
             "studentResultsTitle": "Student Results",
             "titleExerciseGroupColumn": "Exercise Group",
             "titleExerciseColumn": "Exercise",
