--- a/src/main/webapp/i18n/de/assessmentType.json
+++ b/src/main/webapp/i18n/de/assessmentType.json
@@ -1,5 +1,6 @@
 {
     "artemisApp": {
+        "assessmentMode": "Bewertungsmodus",
         "AssessmentType": {
             "null": "",
             "AUTOMATIC": "Automatisch",
