Improve col names

--- a/src/main/webapp/i18n/en/assessmentType.json
+++ b/src/main/webapp/i18n/en/assessmentType.json
@@ -1,6 +1,6 @@
 {
     "artemisApp": {
-        "assessmentMode": "Assessment mode",
+        "assessmentMode": "Assessment Mode",
         "AssessmentType": {
             "null": "",
             "AUTOMATIC": "Automatic",
