--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -239,7 +239,7 @@
                 "update": "Edit Exercise Group",
                 "type": "Type",
                 "title": "Title",
-                "maxPoints": "Max points",
+                "maxPoints": "Max Points",
                 "mandatory": "Mandatory",
                 "optional": "Optional",
                 "noExercises": "No exercises have been added yet.",
