Show more exercise information in the exam exercise overview for instructors (#2022)

--- a/src/main/webapp/i18n/en/assessmentType.json
+++ b/src/main/webapp/i18n/en/assessmentType.json
@@ -1,5 +1,6 @@
 {
     "artemisApp": {
+        "assessmentMode": "Assessment Mode",
         "AssessmentType": {
             "null": "",
             "AUTOMATIC": "Automatic",
