fix issue with assessment type

--- a/src/main/webapp/i18n/de/assessmentType.json
+++ b/src/main/webapp/i18n/de/assessmentType.json
@@ -3,6 +3,7 @@
         "assessmentMode": "Bewertungsmodus",
         "AssessmentType": {
             "null": "",
+            "undefined": "",
             "AUTOMATIC": "Automatisch",
             "SEMI_AUTOMATIC": "Halbautomatisch",
             "MANUAL": "Manuell"
