--- a/src/main/webapp/i18n/en/assessmentType.json
+++ b/src/main/webapp/i18n/en/assessmentType.json
@@ -3,6 +3,7 @@
         "assessmentMode": "Assessment Mode",
         "AssessmentType": {
             "null": "",
+            "undefined": "",
             "AUTOMATIC": "Automatic",
             "SEMI_AUTOMATIC": "Semi-Automatic",
             "MANUAL": "Manual"
