--- a/src/main/webapp/i18n/en/rating.json
+++ b/src/main/webapp/i18n/en/rating.json
@@ -2,6 +2,17 @@
     "artemisApp": {
         "rating": {
             "label": "How useful is the feeedback for you?"
+        },
+        "ratingList": {
+            "exercise": "Exercise",
+            "exerciseType": "Exercise Type",
+            "assessorLogin": "Assessor's Login",
+            "assessorName": "Assessor's Name",
+            "rating": "Rating",
+            "actions": "Actions",
+            "assessmentType": "Assessment Type",
+            "openSubmission": "Show the submission",
+            "title": "List of ratings"
         }
     }
 }
