--- a/src/main/webapp/i18n/de/rating.json
+++ b/src/main/webapp/i18n/de/rating.json
@@ -12,7 +12,8 @@
             "actions": "Aktionen",
             "assessmentType": "Bewertungstyp",
             "openSubmission": "Abgabe anzeigen",
-            "title": "Liste von Ratings"
+            "title": "Liste von Ratings",
+            "pageTitle": "Ratings"
         }
     }
 }
