Add text if no ratings are available

--- a/src/main/webapp/i18n/de/rating.json
+++ b/src/main/webapp/i18n/de/rating.json
@@ -13,7 +13,8 @@
             "assessmentType": "Bewertungstyp",
             "openSubmission": "Abgabe anzeigen",
             "title": "Liste von Ratings",
-            "pageTitle": "Ratings"
+            "pageTitle": "Ratings",
+            "noRatingToShow": "Es gibt noch keine Ratings."
         }
     }
 }
