Changed Max Score into Points, set bonus to 0

--- a/src/main/webapp/i18n/en/courseScoreCalculation.json
+++ b/src/main/webapp/i18n/en/courseScoreCalculation.json
@@ -4,7 +4,7 @@
             "scoreAggregation": "Score Aggregation",
             "myScore": "My Score",
             "myRelativeScore": "My Relative Score (%)",
-            "maxScore": "Max Score",
+            "maxScore": "Points",
             "forQuizzes": "Score for quizzes",
             "forProgramming": "Score for programming exercises",
             "forModeling": "Score for modeling exercises",
