--- a/src/main/webapp/i18n/en/exercise.json
+++ b/src/main/webapp/i18n/en/exercise.json
@@ -58,7 +58,7 @@
             "assessmentDueDate": "Assessment Due Date",
             "assessmentDueDateError": "Assessment Due Date must be after Release and Due Date. Please check your selection again",
             "dateNotSet": "No date set",
-            "maxScore": "Max Score",
+            "maxScore": "Points",
             "difficulty": "Difficulty",
             "noLevel": "No Level",
             "easy": "Easy",
