--- a/src/main/webapp/i18n/de/programmingExercise.json
+++ b/src/main/webapp/i18n/de/programmingExercise.json
@@ -117,7 +117,9 @@
                 "notReleasedTooltip": "Die Programmierübung ist nicht veröffentlicht oder ist veröffentlicht und besitzt noch keine Ergebnisse von Studenten. Daher können die Testfälle geändert werden, ohne dass die Studentenabgaben erneut ausgeführt werden müssen."
             },
             "configureGrading": {
-                "title": "Setze Benotung"
+                "title": "Setze Benotung",
+                "save": "Speichern",
+                "reset": "Zurücksetzen"
             },
             "export": {
                 "downloadAllStudents": "Oder lade die Repositories aller Studenten herunter",
