Add test run management page and button

--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -196,6 +196,7 @@
             "confirmationStartText": "Exam start confirmation text",
             "confirmationEndText": "Exam end confirmation text",
             "assessmentDashboard": "Assessment Dashboard",
+            "testRun": "Test Run",
             "studentExams": "Student Exams",
             "students": "Students",
             "examStudents": {
