--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -196,6 +196,7 @@
             "confirmationStartText": "Klausurbeginn Bestätigungstext",
             "confirmationEndText": "Klausurende Bestätigungstext",
             "assessmentDashboard": "Bewertungstafel",
+            "testRun": "Testlauf",
             "studentExams": "Klausuren der Studenten",
             "students": "Studenten",
             "examStudents": {
