refactor translation strings

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -196,9 +196,14 @@
             "confirmationStartText": "Klausurbeginn Bestätigungstext",
             "confirmationEndText": "Klausurende Bestätigungstext",
             "assessmentDashboard": "Bewertungstafel",
-            "testRun": "Testlauf",
             "studentExams": "Klausuren der Studenten",
             "students": "Studenten",
+            "testRun": {
+                "testRun": "Testlauf",
+                "title": "Testlaufverwaltung: ",
+                "setup": "Testlauf Erstellen",
+                "assess": "Bewerten"
+            },
             "examStudents": {
                 "registeredStudents": "Angemeldete Studenten",
                 "searchResults": "Suchergebnisse",
