--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -196,9 +196,14 @@
             "confirmationStartText": "Exam start confirmation text",
             "confirmationEndText": "Exam end confirmation text",
             "assessmentDashboard": "Assessment Dashboard",
-            "testRun": "Test Run",
             "studentExams": "Student Exams",
             "students": "Students",
+            "testRun": {
+                "testRun": "Test Run",
+                "title": "Test Run Management: ",
+                "setup": "Set up Test Run",
+                "assess": "Assess"
+            },
             "examStudents": {
                 "registeredStudents": "Registered students",
                 "searchResults": "search results",
