create singular assess test runs button

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -202,7 +202,7 @@
                 "testRun": "Testlauf",
                 "title": "Testlaufverwaltung: ",
                 "setup": "Testlauf Erstellen",
-                "assess": "Bewerten"
+                "assess": "Testläufe Bewerten"
             },
             "examStudents": {
                 "registeredStudents": "Angemeldete Studenten",
