Add manage working time button remove load course, just check permissions Add test run modal

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -202,7 +202,8 @@
                 "testRun": "Testlauf",
                 "title": "Testlaufverwaltung: ",
                 "setup": "Testlauf Erstellen",
-                "assess": "Testläufe Bewerten"
+                "assess": "Testläufe Bewerten",
+                "manage": "Arbeitszeit verwalten"
             },
             "examStudents": {
                 "registeredStudents": "Angemeldete Studenten",
