Change .json file for the naming

--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -272,7 +272,7 @@
             "id": "ID",
             "type": "Type",
             "title": "Title",
-            "result": "Result",
+            "result": "Your points",
             "reviewer": "Reviewer",
             "openSubmission": "Open Submission",
             "openAssessment": " Open Assessment",
