--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -202,10 +202,12 @@
                 "testRun": "Testlauf",
                 "title": "Testlaufverwaltung: ",
                 "setup": "Testlauf Erstellen",
+                "setupHint": "Wähle für jede Übungsgruppe eine Übung aus, indem du auf die Übung klickst.\n<strong>Hinweis:</strong> Wenn du bereits einen Testlauf mit einer der Übungen erstellt hast, dann wird diese bereits eine Abgabe und Ergebnis haben.",
                 "assess": "Testläufe Bewerten",
                 "manage": "Arbeitszeit verwalten",
+                "text": "Hier kannst du einen Testlauf für die Klausur erstellen. Wähle aus, welche Aufgaben die Klausur enthalten soll und führe sie aus. Anschliessend, kannst du die Abgabe als Tutor bewerten. Das Ergebnis, kann du als Student einsehen und dich Beschweren. Diese Beschwerden kannst du dann als Tutor bewerten.\n<strong>Hinweis:</strong> Abgaben innerhalb von testläufen werden nicht für die Prüfungsergebnisse gezählt.",
                 "delete": {
-                    "question": "Soll der <strong>{{ title }}</strong> wirklich gelöscht werden? Alle zugehörigen elemente werden ebenfalls gelöscht.",
+                    "question": "Soll der <strong>{{ title }}</strong> wirklich gelöscht werden? Alle zugehörigen elemente werden ebenfalls gelöscht, falls sie von keinem anderen Testlauf referenziert werden.",
                     "typeNameToConfirm": "Bitte gebe: Testlauf zur Bestätigung ein."
                 }
             },
