--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -201,11 +201,14 @@
             "testRun": {
                 "testRun": "Test Run",
                 "title": "Test Run Management: ",
-                "setup": "Set up Test Run",
+                "setup": "Create a Test Run",
+                "setupHint": "Select an exercise for every exercise group by clicking on it.\n<strong>Note:</strong> If you have already created a test run with one of the exercises, the exercise will already contain a submission and result.",
                 "assess": "Assess Test Runs",
                 "manage": "Manage Working Time",
+                "text": "Here you can create a test run for the exam. Pick which exercises your exam should contain and run the conduction. Afterwards you will be able to assess your submissions and grade them as a tutor. You have the option to view the results and complain as a student. Additionally, you can also respond to the complaints about the assessment as a tutor.\n<strong>Note:</strong> Submissions made within test runs do not count towards the exam scores.",
+
                 "delete": {
-                    "question": "Should the <strong>{{ title }}</strong> really be deleted? All associated elements will also be deleted.",
+                    "question": "Should the <strong>{{ title }}</strong> really be deleted? All associated elements will also be deleted, if they are not referenced by any other test run.",
                     "typeNameToConfirm": "Please type: Test Run to confirm."
                 }
             },
