Add warning message to plagiarism header

--- a/src/main/webapp/i18n/de/plagiarism.json
+++ b/src/main/webapp/i18n/de/plagiarism.json
@@ -2,7 +2,8 @@
     "artemisApp": {
         "plagiarism": {
             "confirm": "Bestätigen",
-            "deny": "Ablehnen"
+            "deny": "Ablehnen",
+            "warning": "Bestätigen/Ablehnen eines Plagiats geht beim Neuladen der Seite verloren."
         }
     }
 }
