--- a/src/main/webapp/i18n/de/global.json
+++ b/src/main/webapp/i18n/de/global.json
@@ -212,7 +212,7 @@
             "scores": "Bewertungen",
             "manageHints": "Verwalte Hinweise",
             "addExternalSubmission": "Externe Einreichung anlegen",
-            "questionsAndAnswers": "Fragen und Antworten"
+            "questionsAndAnswers": "Q&A"
         },
         "detail": {
             "field": "Feld",
