--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -213,7 +213,7 @@
             "scores": "Scores",
             "manageHints": "Manage Hints",
             "addExternalSubmission": "Add External Submission",
-            "questionsAndAnswers": "Questions and Answers"
+            "questionsAndAnswers": "Q&A"
         },
         "detail": {
             "field": "Field",
